2001-10-15  Mikael Djurfeldt  <mdj@linnaeus>

	* read.c (scm_lreadr): When user-defined hash procedure returns
	SCM_UNSPECIFIED: Fall back to standard handling instead of raising
	an exception.  (This prevents parsing of uniform vectors from
	interfering with parsing of numbers.)

2001-10-14  Gary Houston  <ghouston@arglist.com>

	* version.c (scm_version): use sprintf instead of snprintf,
	for portability.  thanks to Bill Schottstaedt.

2001-10-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_libguile_la_SOURCES): Added "mkstemp.c".

	* backtrace.c (display_backtrace_file_and_line): Only use
	scm_basename when POSIX support is compiled in.  Thanks to Chris
	Cramer.

2001-10-12  Mikael Djurfeldt  <mdj@linnaeus>

	* validate.h (SCM_VALIDATE_DOUBLE_DEF_COPY): New macro.
	
2001-10-08  Rob Browning  <rlb@defaultvalue.org>

	* gc.c: support ia64 register backing store.
	(SCM_MARK_BACKING_STORE): new macro.

	* continuations.h: support ia64 register backing store.
	(struct scm_t_contregs): add ia64 register backing store.

	* continuations.c: support ia64 register backing store.
	(continuation_mark): mark ia64 register backing store.
	(continuation_free): free ia64 register backing store.
	(scm_make_continuation): capture ia64 register backing store.
	(copy_stack_and_call): copy ia64 register backing store.

2001-10-06  Mikael Djurfeldt  <mdj@linnaeus>

	These changes fixes a race condition in the Guile coop - pthread
	compatibility code.
	
	* coop.c (mother_awake_p): New variable.
	(coop_create): Set mother_awake_p before creating or signalling
	mother; wait until mother is going to sleep before returning.
	(mother): Reset mother_awake_p before going to sleep.

2001-10-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h:  Removed old comment about using SCM_CAR to access
	non-pair cells.

	(SCM_MOST_POSITIVE_FIXNUM, SCM_MOST_NEGATIVE_FIXNUM):  Make sure
	the return value is signed.  Thanks to Brian Crowder for the bug
	report.
